# mp3Convert

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  key02.keystore  说明 .txt
app/src/androidTest/java/com/convert/mymp3convert/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/convert/mymp3convert/: MainActivity.java  MainActivity2.kt  Mp3ConvertUtil.java  Mp3ConvertUtilHelper.java  MyTest.java
app/src/main/java/com/convert/mymp3convert/test/: Demo.java
app/src/main/jni/: NativeMp3ConvertUtil.cpp  NativeMp3ConvertUtil.h  NativeMyTest.cpp  com_convert_mymp3convert_Mp3ConvertUtil.h  com_convert_mymp3convert_MyTest.h
app/src/main/jni/libmp3lame/: util.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/convert/mymp3convert/: ExampleUnitTest.java
demo/: build.gradle
demo/libs/: app-release.aar
demo/src/androidTest/java/com/convert/demo/: ExampleInstrumentedTest.java
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/convert/demo/: MainActivity.java
demo/src/main/res/layout/: activity_main.xml
demo/src/main/res/values/: themes.xml
demo/src/main/res/values-night/: themes.xml
demo/src/test/java/com/convert/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
